commit 91fef462ef339328ff90380ffaa91a9ea87a0313
Date:   Fri Aug 14 23:19:34 2015 +0300

    Fixes for OTPyTestZmqEA with OpenTrader

commit 473308903af5b8d2941cab14609caa86072c4da6
Date:   Wed Aug 12 18:20:29 2015 +0300

    Refactored to put Zmq in OpenTrader - starting testing

commit 0add369ef8a36b7ca7e0dfee0dbefa80318c479e
Date:   Mon Jul 13 20:21:41 2015 +0300

     Tried to fix communications for errors but it still needs a rewrite

commit ff8291f5e3e0c65e5e8362360bb9d51ae87bf2f9
Date:   Sun Jul 12 23:49:31 2015 +0300

    Fixed test Scripts

commit 149c308afe95397e5d65f3e17cd7e761be08eddb
Date:   Sun Jul 12 22:30:30 2015 +0300

    Minor refactoring of Mql4Chart

commit 5f97815adde4ae231ae0b6007e0a542b7fae48b2
Date:   Sun Jun 21 16:40:48 2015 +0300

    Doc updates.

commit d6f34f97eba81a38780b5a457cb2b162f5a7e7bd
Date:   Tue Jun 16 23:22:49 2015 +0300

    Minor bugfix.

commit d97d429bca359953442143124314a3dc4043d3dc
Date:   Thu Jun 4 16:42:23 2015 +0300

    Moved MQL4/Python/OTMql427/cmd2plus.py to OpenTrader
    added MQL4/Python/OTMql427/SimpleFormat.py

commit d32e66ebae7a0223709227fca056da56cc958181
Date:   Wed Jun 3 09:52:21 2015 +0300

    Minor extensions to Mq4Chart.py.

commit 3953bf485970d79165f6db5cedf5d36fc634a831
Date:   Wed May 27 12:11:55 2015 +0300

    Fleshed out share/doc/02Architecture.txt.

commit faa9763780de8434eb6eb1f7e857fb59d1b8ffff
Date:   Thu May 21 23:10:09 2015 +0300

    Added MQL4/Python/OTMql427/cmd2plus.py which is a hacked version
    of cmd2 - to support PikaCmd2.py in OTMql4AMQP.

commit b325b974eedef94eeb26618e0e2ca0461319cbaf
Date:   Mon May 18 15:39:08 2015 +0300

    Refactored out MQL4/Libraries/OTMql4/OTPyChart.mq4 for code
    common to Pika and Zmq.

commit 288780ecba5fd0a1a80b0361733c2e74365594d9
Date:   Fri May 15 11:28:53 2015 +0300

    Refactoring to pull common code from OTMql4AMQP and OTMql4Zmq into OTMql4Py.

commit 28e134e2c0bb8f4707bf299c18fe7d5b5de55795
Date:   Fri May 8 19:10:13 2015 +0300
