@@ -1,1 +1,0 @@
-# -*-mode: python; py-indent-offset: 4; tab-width: 8; encoding: utf-8-dos; coding: utf-8 -*-
