@@ -1,3 +1,13 @@
+commit 4add71613d9b4bacfc3ba40d0d3fc22e3723a3e9
+Date:   Fri Feb 19 22:12:33 2016 +0200
+
+    Moved documentation to a wiki format
+
+commit d13a7d21e94805a75ea431959140c1605f5c429e
+Date:   Fri Aug 21 19:10:34 2015 +0300
+
+    Wired up the global variable fDebugLevel
+
 commit 91fef462ef339328ff90380ffaa91a9ea87a0313
 Date:   Fri Aug 14 23:19:34 2015 +0300
 
